<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ChangePasswordActivity">

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/oldPasswordET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="end"
        android:hint="@string/oldPassword"
        android:inputType="number|numberPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:textColorLink="@android:color/white"
        android:textSize="25sp" />


    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/newPasswordET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="end"
        android:hint="@string/newPassword"
        android:inputType="number|numberPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:textColorLink="@android:color/white"
        android:textSize="26sp" />


    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/confirmPasswordET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="end"
        android:hint="@string/confirmPassword"
        android:inputType="number|numberPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:textColorLink="@android:color/white"
        android:textSize="26sp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/changePasswordBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:background="@color/colorPrimary"
        android:text="@string/change"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:onClick="onChangePasswordBtnClicked"/>

</LinearLayout>