<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|top"
    tools:context=".MainActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/topRecyclerView"
        android:layout_width="wrap_content"
        android:layout_height="128dp"
        android:layout_margin="8dp" />

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/buttonsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:gravity="center" >

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/scrambleBtn"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/scramble"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:onClick="onScrambleBtnClicked"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/recover"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/recover"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:onClick="onRecoverBtnClicked" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/save"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/save"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:onClick="onSaveBtnClicked"/>

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/selectAllTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/selectAll"
        android:textSize="20sp"
        android:textColor="@android:color/holo_blue_dark" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/bottomRecyclerView"
        android:layout_width="wrap_content"
        android:layout_height="128dp"
        android:layout_margin="8dp" />

</android.support.v7.widget.LinearLayoutCompat>