<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/imgLogo"
            android:layout_width="wrap_content"
            android:layout_height="256dp"
            android:layout_margin="64dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/logo"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="end"
            android:hint="@string/password"
            android:inputType="numberPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColorLink="@android:color/white"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="25sp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/colorPrimary"
            android:onClick="onLoginBtnClicked"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/changePasswordBtn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/changePassword"
            android:textSize="25sp"
            android:textColor="@color/colorPrimary"
            android:background="@android:color/transparent"
            android:onClick="onChangePasswordBtnClicked"/>

</LinearLayout>